use FlexibleAdapter with LiveData in KeyListFragment

--- a/OpenKeychain/src/main/res/drawable-v21/list_item_ripple.xml
+++ b/OpenKeychain/src/main/res/drawable-v21/list_item_ripple.xml
@@ -7,6 +7,7 @@
     <item>
         <selector>
             <item android:state_selected="true" android:drawable="@color/pressed_gray"/>
+            <item android:state_activated="true" android:drawable="@color/selected_gray"/>
         </selector>
     </item>
 </ripple>
